--- a/test.ipynb
+++ b/test.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Random Graph"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preprocessing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -36,16 +50,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Strategies"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following section will shows the implementation of the different pivot selection strategies. We applied 5 different strategies:\n",
+    "\n",
+    "1. Random\n",
+    "The random strategy selects nodes at random.\n",
+    "\n",
+    "2. Random indegree\n",
+    "The random indegree strategy selects pivots with a probability proportional to their indegree\n",
+    "\n",
+    "3. Random outdegree\n",
+    "The random outdegree strategy selects pivots with a probability proportional to their outdegree\n",
+    "\n",
+    "4. Page rank based selection\n",
+    "The page rank based selection strategy select pivtos accoring to their page rank."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def random_strategy(G, num_pivots):\n",
-    "    \"\"\"\n",
-    "    Select nodes uniformly at random.\n",
-    "    \"\"\"\n",
-    "    return np.random.choice(list(G.nodes), size=num_pivots, replace=False)\n"
+    "\n",
+    "    return np.random.choice(list(G.nodes), size=num_pivots, replace=False)"
    ]
   },
   {
@@ -94,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -128,9 +166,14 @@
     "    \n",
     "    # Select the top nodes as pivots\n",
     "    pivots = sorted_nodes[:num_pivots]\n",
-    "    return pivots\n",
-    "pivots = pagerank_pivot_selection(G, 3)\n",
-    "pivots"
+    "    return pivots"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Metrics"
    ]
   },
   {
@@ -271,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1483,6 +1526,16 @@
    "metadata": {},
    "source": [
     "## Betweenness"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Select pivots according to the selection strategies\n",
+    "2. Access the shortest path from each pivot to all other nodes in the graph from the precomputed shortest paths\n",
+    "3. For each node v track how many shortest paths run through v\n",
+    "4. Sum the contributions of each node and normalize the aggregated betweenness centrality values by dividing by the total number of pivots "
    ]
   },
   {
