Use strongest connected component

--- a/Chicago_RoadNetwork.ipynb
+++ b/Chicago_RoadNetwork.ipynb
@@ -71,6 +71,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "largest_strongly = max(nx.strongly_connected_components(G), key=len)\n",
+    "G = G.subgraph(largest_strongly)\n",
+    "\n",
+    "print('Number of edges: ', G.number_of_edges())\n",
+    "print('Number of nodes: ', G.number_of_nodes())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -112,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,6 +139,15 @@
     "    degree_sum = sum(indegrees.values())\n",
     "    probabilities = [indegrees[node] / degree_sum for node in all_nodes]\n",
     "    \n",
+    "    # Make sure that no node has a probability of 0\n",
+    "    non_zero_probabilities = [prob for prob in probabilities if prob > 0]\n",
+    "    lowest_value = min(non_zero_probabilities)\n",
+    "    adjustment_value = lowest_value * 0.9\n",
+    "    probabilities = [prob if prob > 0 else adjustment_value for prob in probabilities]\n",
+    "\n",
+    "    total_prob_sum = sum(probabilities)\n",
+    "    probabilities = [prob / total_prob_sum for prob in probabilities]\n",
+    "\n",
     "    # Randomly select pivots with probability proportional to their in-degree\n",
     "    pivots = np.random.choice(all_nodes, size=num_pivots, replace=False, p=probabilities)\n",
     "    \n",
@@ -134,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,6 +170,15 @@
     "    degree_sum = sum(outdegrees.values())\n",
     "    probabilities = [outdegrees[node] / degree_sum for node in all_nodes]\n",
     "    \n",
+    "    # Make sure that no node has a probability of 0\n",
+    "    non_zero_probabilities = [prob for prob in probabilities if prob > 0]\n",
+    "    lowest_value = min(non_zero_probabilities)\n",
+    "    adjustment_value = lowest_value * 0.9\n",
+    "    probabilities = [prob if prob > 0 else adjustment_value for prob in probabilities]\n",
+    "\n",
+    "    total_prob_sum = sum(probabilities)\n",
+    "    probabilities = [prob / total_prob_sum for prob in probabilities]\n",
+    "\n",
     "    # Randomly select pivots with probability proportional to their out-degree\n",
     "    pivots = np.random.choice(all_nodes, size=num_pivots, replace=False, p=probabilities)\n",
     "    \n",
