removed unused files

--- a/facebook_large.ipynb
+++ b/facebook_large.ipynb
@@ -3114,7 +3114,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "snacs",
    "language": "python",
    "name": "python3"
   },
